# shilka-type

./: .commitlintrc.json  .gitignore  .releaserc.json  CHANGELOG.md  DARK_THEME_SETUP.md  Dockerfile  MIGRATION_GUIDE.md  README.md  STATS_FEATURE.md  docker-compose.prod.yml  docker-compose.yml  index.html  package-lock.json  package.json  render.yaml  vercel.json
backend/: .coverage  .dockerignore  Dockerfile  Dockerfile.prod  alembic.ini  coverage.xml  pyproject.toml  pytest.ini
backend/migrations/: env.py
backend/migrations/versions/: 068f725b8c7e_add_themes_table_and_user_theme_field.py  07054e953bd9_add_mode_and_language_to_typing_.py  2b5ef20e4017_add_mode_to_typing_sessions.py  2e14ef42d9ae_add_language_to_typing_sessions.py  55475d42f20c_add_coin_transaction_model.py  558e9fb3c17b_add_themes_table_and_user_theme_field.py  5afaf45d7792_create_users_table.py  8ccfeee27cb5_add_words_and_sentences_tables.py  9ce8a91ba1d8_add_settings_bar_settings_to_user.py  a8ae3c78c380_fix_user_theme2.py  b04749779960_add_moder_role.py  b545a4fcf7fc_add_typing_sessions_table.py  b971d26a06a7_add_new_column_shilka_coins.py  ba5cfc9ab1b1_removed_double_shilka_coins.py  babe6f5d52e5_add_test_type_to_typing_sessions.py  c46d575a6e10_create_users_table.py  ce6fb8c41f17_fix_user_theme3.py  d09f42b69f1d_fix_user_theme.py  d6a8abb78788_add_mode_and_language_to_typing_sessions.py  dc960a61cd2b_add_mode_and_language_to_typing_sessions.py  e57b2025007a_add_themes_table_and_user_theme_field_.py  e99a7c071962_create_users_table.py  f914bde40774_add_user_role.py
backend/scripts/: __init__.py  clear_db.py  load_sentences.py  make_admin.py  seed_db.py
backend/src/: config.py  database.py  logging_config.py  main.py  redis_client.py  websocket_manager.py
backend/src/admin/: router.py  schemas.py  service.py
backend/tests/: conftest.py  test_admin_endpoints.py  test_auth.py  test_content_api.py  test_content_service.py  test_content_utils.py  test_models.py  test_redis_client.py  test_services_auth.py  test_services_stats.py  test_services_theme.py  test_services_theme_additional.py  test_settings.py  test_stats.py  test_stats_utils.py  test_themes.py  test_utils.py  test_utils_get_current_user.py
(+262 files in other folders)
